--- a/second.html
+++ b/second.html
@@ -10,5 +10,6 @@
     <p>it's a game. I've been playing it for 2 years around.</p>
     <p>Oh, by the way, I'm gonna take this to GitHub.</p>
     <p>na n na na </p>
+    <img src="apex.jpg" alt="">
 </body>
 </html>
