Learning to make new branches in GitHub

--- a/second.html
+++ b/second.html
@@ -11,5 +11,7 @@
     <p>Oh, by the way, I'm gonna take this to GitHub.</p>
     <p>na n na na </p>
     <img src="apex.jpg" alt="">
+    <p>Talking to my second branch.</p>
+    <p>This line added in my senond branch.</p>
 </body>
 </html>
