--- a/second.html
+++ b/second.html
@@ -13,5 +13,6 @@
     <img src="apex.jpg" alt="">
     <p>Talking to my second branch.</p>
     <p>This line added in my senond branch.</p>
+    <h2>Added more code in the second  branch.</h2>
 </body>
 </html>
